# libgbs-minimal

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: link_assets.cmake
res/: DMG-KYJ.gbs
src/: main.cpp
